--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   riverpod_annotation: ^2.1.1
   asyncstate: ^2.0.2
   loading_animation_widget: ^1.2.0+4
+  dio: ^5.3.2
+  shared_preferences: ^2.2.0
+  validatorless: ^1.2.3
 
 dev_dependencies:
   flutter_test:
